--- a/TravelTool/View/Base.lproj/Main.storyboard
+++ b/TravelTool/View/Base.lproj/Main.storyboard
@@ -35,6 +35,52 @@
             </objects>
             <point key="canvasLocation" x="1667" y="733"/>
         </scene>
+        <!--Root View Controller-->
+        <scene sceneID="IxR-iL-Tp4">
+            <objects>
+                <tableViewController id="SFA-UB-2Vu" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="wmG-DQ-HGJ">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="Q4E-Oi-jfW">
+                                <rect key="frame" x="0.0" y="28" width="414" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Q4E-Oi-jfW" id="igk-Ww-x6H">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="SFA-UB-2Vu" id="3yJ-nU-14J"/>
+                            <outlet property="delegate" destination="SFA-UB-2Vu" id="efN-18-6w5"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Root View Controller" id="1z4-bd-jsN"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sQD-tB-gmW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2581" y="1456"/>
+        </scene>
+        <!--Mapbox-->
+        <scene sceneID="Rf7-dg-MxU">
+            <objects>
+                <navigationController id="sko-Mo-eW6" userLabel="Mapbox" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="2cX-el-VFF"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="XiX-JL-glb">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="SFA-UB-2Vu" kind="relationship" relationship="rootViewController" id="p5g-Jf-KA5"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bkS-XF-q8s" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1667" y="1456"/>
+        </scene>
         <!--LiveMessageViewController-->
         <scene sceneID="moX-1M-48c">
             <objects>
@@ -224,6 +270,7 @@
                     <connections>
                         <segue destination="As5-7Q-aZh" kind="relationship" relationship="viewControllers" id="w04-J3-xVA"/>
                         <segue destination="PMx-bX-Wkk" kind="relationship" relationship="viewControllers" id="ETb-Ee-ErO"/>
+                        <segue destination="sko-Mo-eW6" kind="relationship" relationship="viewControllers" id="KY0-Yd-IVU"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SHF-AD-HfP" userLabel="First Responder" sceneMemberID="firstResponder"/>
